# camel-ai-coding-workforce

./: .gitignore  README.md  pyproject.toml
src/camel_ai_coding_workforce/: agents.py  main.py  model.py  output.py  workforce.py
